# NFParser

./: .gitignore  CHANGELOG.md  README.md  access_keys.txt  extract_keys_cli.py  main.py  pyproject.toml  raw_keys.html  release-please-config.json
.github/workflows/: release-please.yml
src/: barcode_reader.py  data_exporter.py  nfe_manager.py
tests/: test_barcode_reader.py  test_data_exporter.py  test_nfe_manager.py
tests/resources/: nfe.xml
