[tool.poetry]
name = "nfparser"
version = "0.1.0"
description = "NFParser is a tool to automate data extraction from Brazilian electronic invoices (NF-e), including barcode reading, XML download, data extraction, and saving to Excel, streamlining commercial operations."
authors = ["DevDeividMoura <deividcarvalhomoura+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
